# gsword

./: gsw-manager.c  gsw-manager.h  meson.build
data/: a.desktop.in  abbrmap.ini  do.sh  zh_CN.po
demo/: MyClass.h  MyMain_c  MyMain_c++.cc  MyMain_c.cc  makefile
example/: Makefile  parsekey.c  versenorm.c
examples/: ciphercng.c  flatapiinstallmgr.cpp  flatapilookup.c  flatapiparsekey.c  installmod.c  lastVerseInChapter.c  lastVerseInChapter.cpp  lookup.c  meson.build  search.c  signal.c  simplechapter.c  swmgrex.c  verseposition.c  verseposition.cpp  verseranges.cpp
examples2/: ciphercng.c  flatapiinstallmgr.c  flatapilookup.c  flatapisearch.c  install.c  lastVerseInChapter.c  lastVerseInChapter.cpp  lookup.c  meson.build  parsekey.c  search.c  simplechapter.c  simplechapter.cpp  swmgrex.c  versenorm.c  versenorm.cpp  verseposition.c  verseposition.cpp  verseranges.cpp
gsword/: gsw-enum.h  gsw-installer.cpp  gsw-installer.h  gsw-manager.cpp  gsw-manager.h  gsw-modinfo.c  gsw-modinfo.h  gsw-module.cpp  gsw-module.h  gsw-private.h  gsw-result.c  gsw-result.h  gsw-search-hit.c  gsw-search-hit.h  gsw-status-reporter.cpp  gsw-status-reporter.h  gsw-verse-key.cpp  gsw-verse-key.h  gsw-versi-mgr-system.cpp  gsw-versi-mgr-system.h  gsw-versi-mgr.cpp  gsw-versi-mgr.h  gsword.h  marshal.list  meson.build  test.c
lib/: flatapi.cpp  flatapi.h  gsw-installer.cpp  gsw-installer.h  gsw-manager.cpp  gsw-manager.h  gsw-modinfo.c  gsw-modinfo.h  gsw-module.c  gsw-module.cpp  gsw-module.h  gsw-search-hit.c  gsw-search-hit.h  gsw-status-reporter.cpp  gsw-status-reporter.h  makefile  meson.build  test.c
