executable(
    'ciphercng',
    sources : 'ciphercng.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )

executable(
    'flatapiinstallmgr',
    sources : 'flatapiinstallmgr.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    include_directories : [
	    top_srcdir,
	    top_libdir,
	    ],
    install : false,
    )

executable(
    'flatapilookup',
    sources : 'flatapilookup.c',
    dependencies : [sword_dep],
    include_directories : [
	    top_srcdir,
	    top_libdir,
	    ],
    link_with : lib_flat,
    install : false,
    )

executable(
    'flatapiparsekey',
    sources : 'flatapiparsekey.c',
    dependencies : [sword_dep],
    link_with : lib_flat,
    include_directories : [
	    top_srcdir,
	    top_libdir,
	    ],
    install : false,
    )

executable(
    'flatapisearch',
    sources : 'flatapisearch.c',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )

executable(
    'lastVerseInChapter',
    sources : 'lastVerseInChapter.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )


executable(
    'simplechapter',
    sources : 'simplechapter.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )

executable(
    'swmgrex',
    sources : 'swmgrex.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )

executable(
    'versenorm',
    sources : 'versenorm.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )

executable(
    'verseposition',
    sources : 'verseposition.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )

executable(
    'verseranges',
    sources : 'verseranges.cpp',
    dependencies : [sword_dep],
    link_with : lib_flat,
    install : false,
    )
